# wrap

./: .gitignore  CMakeLists.txt  DOCS.md  README.md  matlab.h  matlab_wrapper.py  pybind_wrapper.py  pybind_wrapper.tpl  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  linux-ci.yml  macos-ci.yml
cmake/: GtwrapUtils.cmake  MatlabWrap.cmake  PybindWrap.cmake  gtwrapConfig.cmake
gtwrap/: interface_parser.py  matlab_wrapper.py  pybind_wrapper.py  template_instantiator.py  test.py
gtwrap/interface_parser/: classes.py  declaration.py  enum.py  function.py  module.py  namespace.py  template.py  tokens.py  type.py  utils.py  variable.py
gtwrap/matlab_wrapper/: __init__.py  matlab_wrapper.py  mixins.py  templates.py  utils.py  wrapper.py
gtwrap/template_instantiator/: classes.py  declaration.py  function.py  helpers.py  method.py
gtwrap/xml_parser/: xml_parser.py
pybind11/tests/: conftest.py  test_eigen_matrix.cpp
pybind11/tests/extra_python_package/: test_files.py
scripts/: matlab_wrap.py  pybind_wrap.py
templates/: README.md  pybind_wrapper.tpl  pybind_wrapper.tpl.example  setup.py.in
tests/: .gitignore  geometry.h  pybind_wrapper.tpl  test_interface_parser.py  test_matlab_wrapper.py  test_pybind_wrapper.py  test_template_instantiator.py
tests/expected-matlab/: MyBase.m  MyFactorPosePoint2.m  MyTemplateMatrix.m  MyTemplatePoint2.m  MyVector12.m  MyVector3.m  Test.m  aGlobalFunction.m  geometry_wrapper.cpp  load2D.m  overloadedGlobalFunction.m
tests/expected-matlab/+gtsam/: Point2.m  Point3.m
tests/expected-python/: geometry_pybind.cpp
tests/expected/matlab/: DefaultFuncInt.m  DefaultFuncObj.m  DefaultFuncString.m  DefaultFuncVector.m  DefaultFuncZero.m  EliminateDiscrete.m  FindKarcherMeanPoint2.m  FindKarcherMeanPoint3.m  FindKarcherMeanPose2.m  FindKarcherMeanPose3.m  FindKarcherMeanRot2.m  FindKarcherMeanRot3.m  FindKarcherMeanSO3.m  FindKarcherMeanSO4.m  ForwardKinematics.m  FunDouble.m  FunRange.m  HessianFactor.m  MultiTemplatedFunction.m  MultiTemplatedFunctionDoubleSize_tDouble.m  MultiTemplatedFunctionStringSize_tDouble.m  MultipleTemplatesIntDouble.m  MultipleTemplatesIntFloat.m  MyFactorPosePoint2.m  MyTemplateA.m  MyVector12.m  MyVector3.m  ParentHasTemplateDouble.m  Pet.m  PrimitiveRefDouble.m  SmartProjectionRigFactorPinholeCameraCal3_S2.m  TemplatedFunctionRot3.m  Test.m  class_wrapper.cpp  enum_wrapper.cpp  functions_wrapper.cpp  inheritance_wrapper.cpp  namespaces_wrapper.cpp  setPose.m  special_cases_wrapper.cpp  (+1 more)
tests/expected/matlab/+gtsam/: SfmTrack.m
tests/expected/python/: class_pybind.cpp  enum_pybind.cpp  functions_pybind.cpp  geometry_pybind.cpp  inheritance_pybind.cpp  namespaces_pybind.cpp  operator_pybind.cpp  special_cases_pybind.cpp  templates_pybind.cpp
tests/fixtures/: class.i  enum.i  functions.i  geometry.h  operator.i  special_cases.i
tests/interface_parser/: test_class.py  test_declaration.py  test_enum.py  test_function.py  test_template.py  test_type.py  test_variable.py
tests/matlab/: geometry.h
